--- a/html/admin/books.html
+++ b/html/admin/books.html
@@ -14,6 +14,9 @@
 
 <body>
   <script src="../../js/logout.js"></script>
+  <script src="../../js/authors.js"></script>
+  <script src="../../js/publishers.js"></script>
+  <script src="../../js/books.js"></script>
   <div class="navBar">
     <div class="logo">
       <a href="../index.html">
@@ -49,7 +52,7 @@
           </a>
         </div>
         
-        <table class="table table-hover table-bordered">
+        <table class="table table-hover table-bordered" id="booksTable">
           <thead>
             <tr>
               <th scope="col">Book Id</th>
@@ -60,48 +63,6 @@
             </tr>
           </thead>
           <tbody>
-            <tr>
-              <th scope="row">4</th>
-              <td>Blue Storm</td>
-              <td>Jessica Daniels</td>
-              <td>Bloomberg</td>
-              <td class="table_buttons">
-                <a class="edit" href="booksEdit.html" title="Edit Book" data-toggle="tooltip">
-                  <i class="material-icons">edit</i>
-                </a>
-                <a class="delete" href="#" title="Delete Book" data-toggle="tooltip">
-                  <i class="material-icons">delete</i>
-                </a>
-              </td>
-            </tr>
-            <tr>
-              <th scope="row">5</th>
-              <td>Greek Gods</td>
-              <td>Jessica Daniels</td>
-              <td>Bloomberg</td>
-              <td class="table_buttons">
-                <a class="edit" href="booksEdit.html" title="Edit Book" data-toggle="tooltip">
-                  <i class="material-icons">edit</i>
-                </a>
-                <a class="delete" href="#" title="Delete Book" data-toggle="tooltip">
-                  <i class="material-icons">delete</i>
-                </a>
-              </td>
-            </tr>
-            <tr>
-              <th scope="row">6</th>
-              <td>The Mist</td>
-              <td>Stephen King</td>
-              <td>Donaldson</td>
-              <td class="table_buttons">
-                <a class="edit" href="booksEdit.html" title="Edit Book" data-toggle="tooltip">
-                  <i class="material-icons">edit</i>
-                </a>
-                <a class="delete" href="#" title="Delete Book" data-toggle="tooltip">
-                  <i class="material-icons">delete</i>
-                </a>
-              </td>
-            </tr>
           </tbody>
         </table>
       </div>
@@ -111,6 +72,29 @@
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script>
+    const tableNode = document.getElementById("booksTable");
+    for (book of getBooks()) {
+      const row = tableNode.insertRow(-1);
+      const idCell = document.createElement("th");
+      idCell.innerHTML = book.bookId;
+      row.appendChild(idCell);
+      const titleCell = row.insertCell(-1);
+      titleCell.innerHTML = book.title;
+      const authorCell = row.insertCell(-1);
+      const author = book.author;
+      if (author) {
+        authorCell.innerHTML = author.authorName;
+      }
+      const publisherCell = row.insertCell(-1);
+      const publisher = book.publisher;
+      if (publisher) {
+        publisherCell.innerHTML = book.publisher.publisherName;
+      }
+      const actionsCell = row.insertCell(-1);
+      actionsCell.innerHTML = "<a class=\"edit\" href=\"booksEdit.html?id=" + book.bookId + "\" title=\"Edit Book\" data-toggle=\"tooltip\"><i class=\"material-icons\">edit</i></a><a class=\"delete\" href=\"#\" title=\"Delete Book\" data-toggle=\"tooltip\"><i class=\"material-icons\">delete</i></a>";
+    }
+  </script>
 </body>
 
 </html>
