--- a/html/admin/booksEdit.html
+++ b/html/admin/booksEdit.html
@@ -13,7 +13,11 @@
 </head>
 
 <body>
+  <script src="../../js/validation.js"></script>
   <script src="../../js/logout.js"></script>
+  <script src="../../js/authors.js"></script>
+  <script src="../../js/publishers.js"></script>
+  <script src="../../js/books.js"></script>
   <div class="navBar">
     <div class="logo">
       <a href="../index.html">
@@ -41,7 +45,9 @@
       <div class="adminTable">
         <h3>Edit Book</h3>
         <div class="adminAddSpace"></div>
-        <form onSubmit="return validateBook();">
+	<!-- If adding were handled server-side, action should probably be this
+	     page and the server should redirect. -->
+        <form action="books.html" onSubmit="return validateAndUpdateBook();">
           <div class="form-group row">
             <label for="title" class="col-sm-2 col-form-label">Title</label>
             <div class="col-sm-10">
@@ -51,9 +57,11 @@
 	  <div class="form-group row errorMessage" id="titleError">Title cannot
 		  be more than 20 characters long.</div>
           <div class="form-group row">
-            <label for="Author" class="col-sm-2 col-form-label">Author</label>
+            <label for="bookAuthor" class="col-sm-2 col-form-label">Author</label>
             <div class="col-sm-10">
-              <input type="text" id="bookAuthor" class="form-control" value="Jessical Daniels" placeholder="Author...">
+              <select id="bookAuthor" class="form-control">
+                <option selected value="0">Choose an author</option>
+              </select>
             </div>
           </div>
 	  <div class="form-group row errorMessage" id="authorError">Book must
@@ -61,7 +69,9 @@
           <div class="form-group row">
             <label for="Author" class="col-sm-2 col-form-label">Publisher</label>
             <div class="col-sm-10">
-              <input type="text" id="bookPublisher" class="form-control" value="Bloomberg" placeholder="Publisher...">
+              <select id="bookPublisher" class="form-control">
+                <option selected value="0">Choose a publisher</option>
+              </select>
             </div>
           </div>
 	  <div class="form-group row errorMessage" id="publisherError">Book must
@@ -79,6 +89,32 @@
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+  <script>
+    const urlSearch = new URLSearchParams(document.location.search.substring(1));
+    const currentBookId = urlSearch.get("id");
+    const currentBook = getBook(Number(currentBookId));
+    document.getElementById("bookTitle").value = currentBook.title;
+    const authorNode = document.getElementById("bookAuthor");
+    for (author of getAuthors()) {
+      const option = document.createElement("option");
+      option.value = author.authorId;
+      option.text = author.authorName;
+      if (author.authorId == currentBook.authId) {
+        option.selected = true;
+      }
+      authorNode.add(option);
+    }
+    const publisherNode = document.getElementById("bookPublisher");
+    for (publisher of getPublishers()) {
+      const option = document.createElement("option");
+      option.value = publisher.publisherId;
+      option.text = publisher.publisherName;
+      if (publisher.publisherId == currentBook.pubId) {
+        option.selected = true;
+      }
+      publisherNode.add(option);
+    }
+  </script>
 </body>
 
 </html>
